[package]
name = "subbox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
reqwest = { version = "0.11.17", features = ["json", "blocking", "rustls-tls"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_derive = "1.0.163"
thiserror = "1.0.40"
